--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -9,6 +9,7 @@
     align-items: center;
     align-content: center;
     padding: 1em;
+    height: 4em;
 }
 .logo { 
      display: flex;
@@ -40,7 +41,7 @@
     display: flex;
     align-items: center;
 }
-button {
+.login-Btn, .logout-Btn {
     background-color: #8D28AD;
     color : #fff;
     padding: 0.7em 1.7em;
@@ -48,10 +49,17 @@ button {
     border: none;
     border-radius: 0.5em;
 }
-i {
+.ri-shopping-cart-2-fill {
     color: #8D28AD;
     font-size: 1.2em;
 }
 .link { 
     text-decoration: none;
+    color: inherit;
+}
+.namee-seller {
+    color: #111;
+    margin-right: 0.5em;
+    font-size: 1.2em;
+    font-weight: bold;
 }
