--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -1,41 +1,54 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 .nav {
     display:  flex;
     justify-content: space-around;
     align-items: center;
     align-content: center;
     padding: 1em;
-    height: 4em;
 }
 .logo { 
      display: flex;
      align-items: center;
 }
-.logo img  {
-    width: 1.5em;
-    height: 1.5em;
-    margin-right: 0.3em;
-
+.logo .link{
+    display: inline-flex;
+    justify-content: flex-start;
+    align-items: center;
 }
-.logo span {
-     font-size: 1.4em;
-     font-weight: bold;
+.logo img{
+    display: inline-block;
+    max-width: 35px;
+    margin-right: .5em;
+}
+.logo span{
+    font-size: 1.4rem;
+    font-weight: bold;
+    display: inline-block;
+    margin-top: 0.4rem;
 }
 .search {
-    width: 40vw;
+    max-width: 500px;
+    width: 100%;
+    position: relative;
 }
 .search input {
+    display: inline-block;
     width: 100%;
-    height: 2.5em;
-    padding: 0.7em;
+    height: 40px;
+    padding: 0.7rem 1rem;
     background-color: #F3F3F3;
     border: none;
     outline: none;
     font-size: .8em;
+    border-radius: 5px;
+}
+.search .icon{
+    position: absolute;
+    top: 50%;
+    right: .5rem;
+    z-index: 2;
+    color: #A4A4A4;
+    transform: translate(-50%, -50%);
+    background-color: #F3F3F3;
 }
 .login {
     display: flex;
@@ -45,9 +58,9 @@
     background-color: #8D28AD;
     color : #fff;
     padding: 0.7em 1.7em;
-    margin-right: 0.8em;
+    margin-right: .8rem;
     border: none;
-    border-radius: 0.5em;
+    border-radius: 6px;
 }
 .ri-shopping-cart-2-fill {
     color: #8D28AD;
@@ -57,9 +70,15 @@
     text-decoration: none;
     color: inherit;
 }
+.auth{
+    display: flex;
+    align-items: center;
+}
 .namee-seller {
+    display: inline-block;
     color: #111;
     margin-right: 0.5em;
     font-size: 1.2em;
-    font-weight: bold;
+    font-weight: 500;
+    margin-top: 0.2rem;
 }
