--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,17 @@ body{
     font-family: 'Poppins', sans-serif;
 }
 
+button{
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
+input{
+    border: none;
+    outline: none;
+}
+
 .container{
     width: 100%;
     padding: 0 15px;
