Style Card Books [CSS]

--- a/client/src/Components/Login/Login.css
+++ b/client/src/Components/Login/Login.css
@@ -20,7 +20,7 @@
     max-width: 350px;
     width: 100%;
 }
-.btn {
+.form-login .btn {
     text-align: right;
     font-size: 1.5em;
     margin-bottom: 0.5em;
