--- a/client/src/Components/Books/ShowBooks/BookCard/BookCard.css
+++ b/client/src/Components/Books/ShowBooks/BookCard/BookCard.css
@@ -1,3 +1,6 @@
+.single-book{
+    margin-bottom: 1rem;
+}
 .single-book .book-img{
     width: 100%;
     height: 430px;
@@ -18,7 +21,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(141, 40, 173, 0.7);
+    background: rgba(141, 40, 173, 0.8);
     display: flex;
     justify-content: flex-end;
     flex-direction: column;
