--- a/client/src/Components/Cart/EmptyCart/EmptyCart.css
+++ b/client/src/Components/Cart/EmptyCart/EmptyCart.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 80vw;
-    margin: 3em auto;
+    margin: 6rem auto 0;
 }
 .empty-pic {
     width: 40%;
