--- a/client/src/Components/Pagination/Pagination.css
+++ b/client/src/Components/Pagination/Pagination.css
@@ -15,16 +15,19 @@
     list-style: none;
     width: 40px;
     border:1px solid #8D28AD;
-    padding: .2rem .4rem;
     font-size: .9rem;
     margin: 0 .3rem;
     border-radius: .3rem;
     transition: .4s;
 }
 .page-item:hover{
+    background-color: #8e28ada2;
+}
+.page-item.active{
     background-color: #8D28AD;
 }
-.page-item:hover .page-link{
+.page-item:hover .page-link,
+.page-item.active .page-link{
     color: #FFF;
 }
 .page-link {
@@ -32,6 +35,7 @@
     color :#8D28AD;
     font-size: 1.5em;
     display: inline-flex;
+    padding: .2rem .4rem;
     justify-content: center;
     align-items: center;
     transition: .4s;
