--- a/client/src/Components/BookDetails/BookDetails.css
+++ b/client/src/Components/BookDetails/BookDetails.css
@@ -71,6 +71,7 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  margin-right: 1rem;
 }
 .Buy i{
   margin-right: 0.5em;
@@ -82,5 +83,4 @@
   padding: 0.5em 1.5em;
   text-decoration: none;
   border-radius: 5px;
-  margin-left: 1rem;
 }
