--- a/client/src/Components/Navbar/Navbar.css
+++ b/client/src/Components/Navbar/Navbar.css
@@ -5,10 +5,16 @@
     align-content: center;
     padding: 1em;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.07);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 100;
+    background-color: #FFF;
 }
 .logo { 
-     display: flex;
-     align-items: center;
+    display: flex;
+    align-items: center;
 }
 .logo .link{
     display: inline-flex;
@@ -94,8 +100,8 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    top: -4px;
-    right: -7px;
+    top: -6px;
+    right: -10px;
     background-color: rgb(255, 48, 48);
     width: 20px;
     height: 20px;
