--- a/client/src/Components/Features/Features.css
+++ b/client/src/Components/Features/Features.css
@@ -1,9 +1,13 @@
-.container.features {
+.features {
+    background-color: #FCF8FD;
+}
+.features .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     padding: 5em 15px;
+
 }
 .feature {
     margin-bottom: 1em;
@@ -25,6 +29,12 @@
 @media (max-width:768px) {
     .container.features {
         justify-content: center;
+    }
+    .feature  {
         text-align: center;
+    }
+    .feature img {
+        display: block;
+        margin: 0 auto 1em;
     }
 }
