--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -110,6 +110,11 @@
     justify-content: space-between;
 }
 
+.reserved .link{
+    color: #8D28AD;
+    font-weight: 600;
+}
+
 @media (max-width:768px) {
     .container.clevr{
         flex-direction: column;
