--- a/client/src/Components/Pagination/Pagination.css
+++ b/client/src/Components/Pagination/Pagination.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 2rem 0 0;
+    margin: 2rem 0;
 }
 .pagination  {
     list-style: none;
