--- a/client/src/Components/Banner/Banner.css
+++ b/client/src/Components/Banner/Banner.css
@@ -1,1 +1,34 @@
-/* CSS */
+.hero-image {
+
+    background-image: linear-gradient(90deg, rgba(141, 40, 173, 0.8),rgba(141, 40, 173, 0.8)), url("./home.jpg");
+    height: 685px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+  }
+
+  .hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+  }
+  .homeTitle{
+      margin-bottom: 1em;
+  }
+  .homeDescription{
+      width:600px ;
+    margin-bottom: 3em;
+  }
+
+  .hero-text .homeBtn {
+    color: #8d28ad;
+    background-color: #fff;
+    border: 1px solid #8d28ad;
+    padding: 0.7em 1.7em;
+    text-decoration: none;
+    border-radius: 5px;
+  }
