--- a/client/src/Components/BookDetails/BookDetails.css
+++ b/client/src/Components/BookDetails/BookDetails.css
@@ -103,5 +103,9 @@
 }
 
 .related-books .books .single-related{
-  max-width: 18%;
+  max-width: 18%;  
+}
+
+.related-books .books .single-related:not(:last-child){
+  margin-right: 2.5%;
 }
