--- a/client/src/Components/AddBook/AddBook.css
+++ b/client/src/Components/AddBook/AddBook.css
@@ -22,13 +22,13 @@
     margin-bottom: .5rem;
     text-align: center;
 }
-.addmodlabel label {
+form label {
     display: block;
     font-weight: 400;
     margin-bottom: 0.2em;
     font-size: .9rem;
 }
-.add-modal .input-add {
+.input-add {
     width: 30vw;
     height: 40px;
     border-radius: 5px;
@@ -36,12 +36,12 @@
     padding: 0.5em;
     margin-bottom: 1em;
 }
-.add-modal .category-price {
+.category-price {
     display: flex;
     justify-content: space-between;
     width: 30vw;
 }
-.add-modal .price-input, .category {
+.price-input, form .category {
     width: 14vw;
 }
 .add-form-Btns {
